--- a/index.html
+++ b/index.html
@@ -7,110 +7,144 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.css"/>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="./assets/css/style.css" rel="stylesheet"/>
   <title>Weather, Should You Check or Not - KR</title>
 
 </head>
 
 <body>
 
-  <header>
+  <!-- Navbar -->
 
-    <nav class="navbar navbar-dark bg-dark justify-content-between">
-      <a class="navbar-brand">Weather, Should You Check or Not - KR</a>
-      <div id="search-btn">
-        <input id="search-box" class="form-control mr-sm-2" type="search" placeholder="City..." aria-label="Search">
-        <button id="search-button" class="btn btn-outline-light my-2 my-sm-0">Search</button>
+  <nav class="navbar">
+    <h2 class="website-name">Weather, Should You Check or Not - KR</h2>
+    <form id="search-box-2" class="search-form">
+      <input id="search-box" type="text" placeholder="City">
+      <button id="search-button" type="submit">Search</button>
+    </form>
+  </nav>
+
+  <!-- Previous cities column -->
+
+  <div class="city-column">
+    <h2 class="column-title">Previous Searches</h2>
+    <ul class="city-list">
+      <li id="city-1" class="city">City 1</li>
+      <li id="city-2" class="city">City 2</li>
+      <li id="city-3" class="city">City 3</li>
+      <li id="city-4" class="city">City 4</li>
+      <li id="city-5" class="city">City 5</li>
+      <li id="city-6" class="city">City 6</li>
+    </ul>
+  </div>
+
+  <!-- Main Weather Card -->
+
+  <div class="weather-card">
+    <h2 id="current-city" class="city-name">City Name</h2>
+    <div class="card-info">
+      <div class="date">
+        <p id="current-date" class="day">01-01-2020</p>
+        <!-- <iframe id="current-symbol" class="fas fa-sun" style= "height: 100px; width: 100px"></i> -->
+          <img id="current-symbol" style= "height: 100px; width: 100px" alt="">
       </div>
-    </nav>
+      <div class="day-info">
+        <p id="current-day" class="day-name">Friday</p>
+        <p id="current-wind" class="wind-speed">Wind Speed: 10 mph</p>
+        <p id="current-temperature" class="temperature">Temperature: 75°F</p>
+        <p  id="current-humidity" class="humidity">Humidity: 40%</p>
+      </div>
+    </div>
+  </div>
 
-  </header>
+  <!-- 5 Weather cards -->
 
-  <div id="weather-card">
+  <div class="five-weather-card">
 
-  <section class="vh-100" style="background-color: white;">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-md-12 col-xl-10">
-  
-          <div class="card shadow-0 border border-dark border-5 text-dark" style="border-radius: 10px;">
-            <div class="card-body p-4">
-  
-              <div class="row text-center">
-                <div class="col-md-9 text-center border-end border-5 border-dark py-4"
-                  style="margin-top: -1.5rem; margin-bottom: -1.5rem;">
-                  <div class="d-flex justify-content-around mt-3">
-                    <p id="current-city" class="small">New York</p>
-                    <p id="current-date" class="small">21.02.2021</p>
-                    <p id="current-condition" class="small">Rain map</p>
-                  </div>
-                  <div class="d-flex justify-content-around align-items-center py-5 my-4">
-                    <p id="current-temperature" class="fw-bold mb-0" style="font-size: 7rem;">-4°C</p>
-                    <div class="text-start">
-                      <p id="current-time" class="small">10:00</p>
-                      <p id="current-day" class="h3 mb-3">Sunday</p>
-                      <p id="current-humidity" class="small mb-0">Humidity:</p>
-                      <p id="current-wind" class="small mb-0">Wind:</p>
-                    </div>
-                  </div>
-                  <div class="d-flex justify-content-around align-items-center mb-3">
-                    <div class="flex-column">
-                      <i class="fas fa-minus"></i>
-                    </div>
-                    <div class="flex-column border" style="border-radius: 10px; padding: .75rem">
-                      <p id="current-day-1" class="small mb-1">Sun</p>
-                      <p id="day-1-temp" class="small mb-0"><strong>-4°C</strong></p>
-                      <p id="day-1-Hum"></p>
-                      <p id="day-1-Win"></p>
-                    </div>
-                    <div class="flex-column">
-                      <p id="day-2" class="small mb-1">Mon</p>
-                      <p id="day-2-temp" class="small mb-0"><strong>-4°C</strong></p>
-                    </div>
-                    <div class="flex-column">
-                      <p id="day-3" class="small mb-1">Tue</p>
-                      <p id="day-3-temp" class="small mb-0"><strong>-4°C</strong></p>
-                    </div>
-                    <div class="flex-column">
-                      <p id="day-4" class="small mb-1">Wed</p>
-                      <p id="day-4-temp" class="small mb-0"><strong>-4°C</strong></p>
-                    </div>
-                    <div class="flex-column">
-                      <p id="day-5" class="small mb-1">Thu</p>
-                      <p id="day-5-temp" class="small mb-0"><strong>-4°C</strong></p>
-                    </div>
-                    <div class="flex-column">
-                      <i class="fas fa-minus"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-3 text-end">
-                  <h1 id="prev-searches" class="small mt-3 mb-5 pb-5">Previous Searches</h1>
-                  <button id="city-1" class="pb-1">Toronto</button>
-                  <button id="city-1" class="pb-1">Paris</button>
-                  <button id="city-1" class="pb-1">London</button>
-                  <button id="city-1" class="pb-1">Amsterdam</button>
-                  <button id="city-1" class="pb-1">Los Angeles</button>
-                  <button id="city-1" class="pb-1">Montreal</button>
-                </div>
-              </div>
-  
-            </div>
-          </div>
-  
+    <div class="days-weather-card">
+      <h2 id="dis-city-1" class="city-name">City Name</h2>
+      <div class="card-info">
+        <div class="date">
+          <p id="date-1" class="day">01-01-2020</p>
+          <i class="fas fa-sun" style= "height: 100px; width: 100px"></i>
+        </div>
+        <div class="day-info">
+          <p id="day-1" class="day-name">Friday</p>
+          <p id="day-1-Win" class="wind-speed">Wind Speed: 10 mph</p>
+          <p id="day-1-temp" class="temperature">Temperature: 75°F</p>
+          <p id="day-1-Hum" class="humidity">Humidity: 40%</p>
         </div>
       </div>
     </div>
-  </section>
 
-</div>
+    <div class="days-weather-card">
+      <h2 id="dis-city-2" class="city-name">City Name</h2>
+      <div class="card-info">
+        <div class="date">
+          <p id="date-2" class="day">01-01-2020</p>
+          <i class="fas fa-sun">Icon</i>
+        </div>
+        <div class="day-info">
+          <p id="day-2" class="day-name">Friday</p>
+          <p class="wind-speed">Wind Speed: 10 mph</p>
+          <p class="temperature">Temperature: 75°F</p>
+          <p class="humidity">Humidity: 40%</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="days-weather-card">
+      <h2 id="dis-city-3" class="city-name">City Name</h2>
+      <div class="card-info">
+        <div class="date">
+          <p id="date-3" class="day">01-01-2020</p>
+          <i class="fas fa-sun">Icon</i>
+        </div>
+        <div class="day-info">
+          <p id="day-3" class="day-name">Friday</p>
+          <p class="wind-speed">Wind Speed: 10 mph</p>
+          <p class="temperature">Temperature: 75°F</p>
+          <p class="humidity">Humidity: 40%</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="days-weather-card">
+      <h2 id="dis-city-4" class="city-name">City Name</h2>
+      <div class="card-info">
+        <div class="date">
+          <p id="date-4" class="day">01-01-2020</p>
+          <i class="fas fa-sun">Icon</i>
+        </div>
+        <div class="day-info">
+          <p id="day-4" class="day-name">Friday</p>
+          <p class="wind-speed">Wind Speed: 10 mph</p>
+          <p class="temperature">Temperature: 75°F</p>
+          <p class="humidity">Humidity: 40%</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="days-weather-card">
+      <h2 id="dis-city-5" class="city-name">City Name</h2>
+      <div class="card-info">
+        <div class="date">
+          <p id="date-5" class="day">01-01-2020</p>
+          <i class="fas fa-sun">Icon</i>
+        </div>
+        <div class="day-info">
+          <p id="day-5" class="day-name">Friday</p>
+          <p class="wind-speed">Wind Speed: 10 mph</p>
+          <p class="temperature">Temperature: 75°F</p>
+          <p class="humidity">Humidity: 40%</p>
+        </div>
+      </div>
+    </div>
   
-<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+</div>
+
+<!-- <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script> -->
 <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
 <script src="./assets/js/script.js"></script>
 
