future icons won't render

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     <div class="card-info">
       <div class="date">
         <p id="current-date" class="day">01-01-2020</p>
-        <!-- <iframe id="current-symbol" class="fas fa-sun" style= "height: 100px; width: 100px"></i> -->
           <img id="current-symbol" style= "height: 100px; width: 100px" alt="">
       </div>
       <div class="day-info">
@@ -67,7 +66,7 @@
       <div class="card-info">
         <div class="date">
           <p id="date-1" class="day">01-01-2020</p>
-          <i class="fas fa-sun" style= "height: 100px; width: 100px"></i>
+          <img id="future-symbol" style= "height: 100px; width: 100px" alt="">
         </div>
         <div class="day-info">
           <p id="day-1" class="day-name">Friday</p>
