everything works except for previous search button

--- a/index.html
+++ b/index.html
@@ -27,19 +27,25 @@
 
   <!-- Previous cities column -->
 
+  <div id="prev-searches">
+
   <div class="city-column">
     <h2 class="column-title">Previous Searches</h2>
-    <ul class="city-list">
-      <li id="city-1" class="city">City 1</li>
+    <ul id="city-ul" class="city-list">
+      <!-- <li id="city-1" class="city">City 1</li>
       <li id="city-2" class="city">City 2</li>
       <li id="city-3" class="city">City 3</li>
       <li id="city-4" class="city">City 4</li>
       <li id="city-5" class="city">City 5</li>
-      <li id="city-6" class="city">City 6</li>
+      <li id="city-6" class="city">City 6</li> -->
     </ul>
   </div>
 
+</div>
+
   <!-- Main Weather Card -->
+
+  <div id="all-weather-cards">
 
   <div class="weather-card">
     <h2 id="current-city" class="city-name">City Name</h2>
@@ -66,7 +72,7 @@
       <div class="card-info">
         <div class="date">
           <p id="date-1" class="day">01-01-2020</p>
-          <img id="future-symbol" style= "height: 100px; width: 100px" alt="">
+          <img id="future-symbol-1" style= "height: 100px; width: 100px" alt="">
         </div>
         <div class="day-info">
           <p id="day-1" class="day-name">Friday</p>
@@ -82,13 +88,13 @@
       <div class="card-info">
         <div class="date">
           <p id="date-2" class="day">01-01-2020</p>
-          <i class="fas fa-sun">Icon</i>
+          <img id="future-symbol-2" style= "height: 100px; width: 100px" alt="">
         </div>
         <div class="day-info">
           <p id="day-2" class="day-name">Friday</p>
-          <p class="wind-speed">Wind Speed: 10 mph</p>
-          <p class="temperature">Temperature: 75°F</p>
-          <p class="humidity">Humidity: 40%</p>
+          <p id="day-2-Win" class="wind-speed">Wind Speed: 10 mph</p>
+          <p id="day-2-temp" class="temperature">Temperature: 75°F</p>
+          <p id="day-2-Hum" class="humidity">Humidity: 40%</p>
         </div>
       </div>
     </div>
@@ -98,13 +104,13 @@
       <div class="card-info">
         <div class="date">
           <p id="date-3" class="day">01-01-2020</p>
-          <i class="fas fa-sun">Icon</i>
+          <img id="future-symbol-3" style= "height: 100px; width: 100px" alt="">
         </div>
         <div class="day-info">
           <p id="day-3" class="day-name">Friday</p>
-          <p class="wind-speed">Wind Speed: 10 mph</p>
-          <p class="temperature">Temperature: 75°F</p>
-          <p class="humidity">Humidity: 40%</p>
+          <p id="day-3-Win" class="wind-speed">Wind Speed: 10 mph</p>
+          <p id="day-3-temp" class="temperature">Temperature: 75°F</p>
+          <p id="day-3-Hum" class="humidity">Humidity: 40%</p>
         </div>
       </div>
     </div>
@@ -114,13 +120,13 @@
       <div class="card-info">
         <div class="date">
           <p id="date-4" class="day">01-01-2020</p>
-          <i class="fas fa-sun">Icon</i>
+          <img id="future-symbol-4" style= "height: 100px; width: 100px" alt="">
         </div>
         <div class="day-info">
           <p id="day-4" class="day-name">Friday</p>
-          <p class="wind-speed">Wind Speed: 10 mph</p>
-          <p class="temperature">Temperature: 75°F</p>
-          <p class="humidity">Humidity: 40%</p>
+          <p id="day-4-Win" class="wind-speed">Wind Speed: 10 mph</p>
+          <p id="day-4-temp" class="temperature">Temperature: 75°F</p>
+          <p id="day-4-Hum" class="humidity">Humidity: 40%</p>
         </div>
       </div>
     </div>
@@ -130,17 +136,19 @@
       <div class="card-info">
         <div class="date">
           <p id="date-5" class="day">01-01-2020</p>
-          <i class="fas fa-sun">Icon</i>
+          <img id="future-symbol-5" style= "height: 100px; width: 100px" alt="">
         </div>
         <div class="day-info">
           <p id="day-5" class="day-name">Friday</p>
-          <p class="wind-speed">Wind Speed: 10 mph</p>
-          <p class="temperature">Temperature: 75°F</p>
-          <p class="humidity">Humidity: 40%</p>
+          <p id="day-5-Win" class="wind-speed">Wind Speed: 10 mph</p>
+          <p id="day-5-temp" class="temperature">Temperature: 75°F</p>
+          <p id="day-5-Hum" class="humidity">Humidity: 40%</p>
         </div>
       </div>
     </div>
   
+</div>
+
 </div>
 
 <!-- <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script> -->
